--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <a href="broadwayboogiewoogie.jpg" download="broadwayboogiewoogie.jpg">
         download link version
       </a>
-      <btn id="share">
+      <button id="share">
         download button version
-      </btn>
+      </button>
     </div>
     <script src="./sript.js" />
   </body>
