--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Test Sandbox</title>
   </head>
   <body>
-    <h1 id="header"></h1>
+    <h1 id="header">Updating this so I can see the change</h1>
     <div style="display: flex; flex-direction: column; align-content: center">
       <img
         src="./broadwayboogiewoogie.jpg"
