--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Test Sandbox</title>
   </head>
   <body>
-    <h1 id="header">Updating this so I can see the change</h1>
+    <h1 id="header">Updating this so I can see the change. Commit: fixes script?</h1>
     <div style="display: flex; flex-direction: column; align-content: center">
       <img
         src="./broadwayboogiewoogie.jpg"
@@ -24,6 +24,6 @@
         download button version
       </button>
     </div>
-    <script src="./sript.js" />
+    <script src="./sript.js"></script>
   </body>
 </html>
